Fixed layout issues for help overlay

--- a/styles/layout.css
+++ b/styles/layout.css
@@ -6,6 +6,9 @@ li {
     text-indent: -2em;
     padding-left: 3em;
 }
+    li ul {
+        margin: 0;
+    }
 html, body {
     width: 100%;
     max-width: 100%;
@@ -130,10 +133,11 @@ input#search-input {
     top: 0;
     background: rgba(0, 0, 0, 0.5);
 }
-    .background-overlay > * {
-        padding: 20px;
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translateX(-50%)translateY(-50%);
-    }
+#help-overlay > .container {
+    height: auto;
+    padding: 20px;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translateX(-50%) translateY(-50%);
+}
